<resources>
    <string name="app_name">ComSSa</string>
    <string name="registering_message_ready">InstanceID 토큰 가져오기</string>
    <string name="registering_message_generating">InstanceID 토큰 생성중...</string>
    <string name="registering_message_complete">완료!</string>
    <string-array name="day_of_week">
        <item>sun</item>
        <item>mon</item>
        <item>tue</item>
        <item>wed</item>
        <item>thu</item>
        <item>fri</item>
        <item>sat</item>
    </string-array>

    <string name="login_msg">로그인을 해주세요</string>
    <string name="login_id">아이디 : </string>
    <string name="login_pw">비밀번호 : </string>
    <string name="login_btn">로그인</string>
    <string name="join_btn">회원가입</string>

</resources>
