<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_msg"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/login_id"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            tools:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/edit_id"
            android:inputType="text"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/login_pw"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/edit_pw"
            android:inputType="textPassword"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            />
        <Button
            android:id="@+id/btn_join"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/join_btn"
            />
    </LinearLayout>


</LinearLayout>